# yab_parser

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
yab_parser/: __init__.py  __main__.py  babel_extractors.py  builder.py  checker.py  config.py  main.py  yarnspinner.lark
yab_parser/example_media/: example.mov
yab_parser/schemas/: __init__.py  script.py  settings.py
